opam-version: "2.0"
name: "httpun-async"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [ "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/httpun"
bug-reports: "https://github.com/inhabitedtype/httpun/issues"
dev-repo: "git+https://github.com/inhabitedtype/httpun.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.5.0"}
  "faraday-async" {>= "0.7.2"}
  "async" {>= "v0.14.0"}
  "httpun" {= version}
  "gluten-async" {>= "0.2.0"}
]
depopts: ["async_ssl"]
pin-depends: [
  [ "httpun.dev" "git+https://github.com/anmonteiro/httpun.git#fork" ]
]
synopsis: "Async support for http/af"
