opam-version: "2.0"
name: "httpun-lwt-unix"
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
authors: [
  "Antonio Monteiro <anmonteiro@gmail.com>"
  "Anton Bachin <antonbachin@yahoo.com>"
  "Spiros Eliopoulos <spiros@inhabitedtype.com>"
]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/httpun"
bug-reports: "https://github.com/inhabitedtype/httpun/issues"
dev-repo: "git+https://github.com/inhabitedtype/httpun.git"
build: [
  ["dune" "build" "-p" name]
]
depends: [
  "ocaml" {>= "5.0"}
  "httpun" {>= "0.6.0"}
  "dune" {>= "1.5"}
  "gluten-eio"
]
pin-depends: [
  [ "httpun.dev" "git+https://github.com/anmonteiro/httpun.git#fork" ]
]
synopsis: "EIO support for http/af"
