opam-version: "2.0"
name: "httpun-eio"
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/httpun"
bug-reports: "https://github.com/anmonteiro/httpun/issues"
dev-repo: "git+https://github.com/anmonteiro/httpun.git"
build: [
  ["dune" "build" "-p" name]
]
depends: [
  "ocaml" {>= "5.0"}
  "httpun" {>= "0.6.0"}
  "dune" {>= "1.5"}
  "gluten-eio"
]
synopsis: "EIO support for httpun"
