opam-version: "2.0"
name: "httpun-eio"
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/httpun"
bug-reports: "https://github.com/anmonteiro/httpun/issues"
dev-repo: "git+https://github.com/anmonteiro/httpun.git"
build: [
  ["dune" "build" "-p" name]
]
depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.0.0"}
  "httpun" {= version}
  "gluten-eio" {>= "0.5.0"}
]
synopsis: "EIO support for httpun"
