opam-version: "2.0"
name: "httpun-lwt-unix"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [
  "Anton Bachin <antonbachin@yahoo.com>"
  "Spiros Eliopoulos <spiros@inhabitedtype.com>"
  "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/httpun"
bug-reports: "https://github.com/anmonteiro/httpun/issues"
dev-repo: "git+https://github.com/anmonteiro/httpun.git"
build: [
  ["dune" "build" "-p" name]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "httpun" {= version}
  "httpun-lwt" {= version}
  "dune" {>= "3.0.0"}
  "gluten-lwt-unix" {>= "0.5.0"}
]
synopsis: "Lwt + Unix support for httpun"
