opam-version: "2.0"
name: "httpun-lwt"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [
  "Anton Bachin <antonbachin@yahoo.com>"
  "Spiros Eliopoulos <spiros@inhabitedtype.com>"
]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/httpun"
bug-reports: "https://github.com/inhabitedtype/httpun/issues"
dev-repo: "git+https://github.com/inhabitedtype/httpun.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "httpun"
  "dune"
  "lwt"
  "gluten-lwt" {>= "0.2.0"}
]
synopsis: "Lwt support for http/af"
