opam-version: "2.0"
name: "httpun-mirage"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
           "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/httpun"
bug-reports: "https://github.com/inhabitedtype/httpun/issues"
dev-repo: "git+https://github.com/inhabitedtype/httpun.git"
build: [
  ["dune" "build" "-p" name]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "faraday-lwt"
  "httpun"
  "gluten-mirage" {>= "0.3.0"}
  "conduit-mirage" {>= "2.0.2"}
  "mirage-flow" {>= "2.0.0"}
  "cstruct"
  "dune"
  "lwt"
]
synopsis: "Mirage support for http/af"
