opam-version: "2.0"
name: "httpun-mirage"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/httpun"
bug-reports: "https://github.com/anmonteiro/httpun/issues"
dev-repo: "git+https://github.com/anmonteiro/httpun.git"
build: [
  ["dune" "build" "-p" name]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.0.0"}
  "httpun" {= version}
  "gluten-mirage" {>= "0.5.0"}
  "mirage-flow" {>= "2.0.0"}
  "cstruct"
  "lwt"
]
synopsis: "Mirage support for httpun"
