opam-version: "2.0"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [
  "Spiros Eliopoulos <spiros@inhabitedtype.com>"
  "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/httpun"
bug-reports: "https://github.com/anmonteiro/httpun/issues"
dev-repo: "git+https://github.com/anmonteiro/httpun.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.0.0"}
  "alcotest" {with-test}
  "httpun-types" {= version}
  "bigstringaf" {>= "0.9.0"}
  "angstrom" {>= "0.15.0"}
  "faraday"  {>= "0.8.0"}
]
synopsis:
  "A high-performance, memory-efficient, and scalable HTTP library for OCaml"
