(executable
 (name wrk_async_benchmark)
 (modules wrk_async_benchmark)
 (libraries
  httpun
  httpun_examples
  httpun-async
  async
  core
  core_unix.command_unix))

(executable
 (name wrk_lwt_benchmark)
 (modules Wrk_lwt_benchmark)
 (libraries httpun httpun_examples httpun-lwt-unix lwt.unix base))

(alias
 (name benchmarks)
 (deps
  (glob_files *.exe)))
